--- a/index.css
+++ b/index.css
@@ -2,10 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    
-    
 }
-
 
 nav{
     display: flex;
@@ -13,7 +10,7 @@ nav{
     align-items: center;
     min-height: 8vh;
     font-family: 'Poppins', sans-serif;
-    background-color: #eeeeee; 
+    background-color: #eeeeee;
     border-bottom: solid 2px rgb(27,28,28);
 }
 
@@ -26,29 +23,21 @@ nav{
 }
 
 .text{
-display: flex;
+    display: flex;
     margin: auto;
     font-family: 'Poppins', sans-serif;
     font-size: 25px;
-    
 }
 
 .image{
-  
     max-width: 100%;
 }
-
-
-
-
 
 .logo{
     color: 1B1C1C;
     text-transform: uppercase;
     letter-spacing: 5px;
     font-size: 20px;
-    
-    
 }
 
 
@@ -56,15 +45,12 @@ display: flex;
     display:flex;
     justify-content: space-around;
     width: 50%;
-    
-    
 }
 
 .nav-links li{
     list-style: none;
-    
-    
 }
+
 .nav-links a{
     color: rgb(27, 28, 28);
     text-decoration: none;
@@ -73,46 +59,33 @@ display: flex;
     font-size: 14px;
 }
 
-.burger{
-    display: none;
-    
-}
-
-.burger div{
+.hamburger div {
     width: 25px;
     height: 3px;
     background-color: rgb(27, 28, 28);
     margin: 5px;
-    
-    
 }
 
 @media screen and (max-width: 1024px){
    .nav-links{
-   
-    width: 50%;
-    
-    
-}
- .image{
-  
-    max-width: 100%;
-}
-   
-}
-@media screen and (max-width: 768px){
-    
-img{
-    max-width: 100%
+        width: 50%;
+    }
+    .image{
+        max-width: 100%;
+    }
+
+    .hamburger {
+        display: none;
+    }
 }
 
- 
-    
-    
-    body{
+@media screen and (max-width: 768px){
+    body {
         overflow-x: hidden;
     }
-   
+    img{
+        max-width: 100%
+    }
     .nav-links{
         position: absolute;
         right: 0px;
@@ -125,59 +98,64 @@ img{
         width: 100%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
-        
+
     }
     .nav-links a{
         color: #eeeeee;
     }
-    
     .nav-link li{
         opacity: 0;
-        
     }
-    .burger{
+    .hamburger {
         display: block;
-        cursor: pointer;
     }
-    
-    
+    .nav-active {
+        transform: translateX(0%);
+    }
 }
-
-.nav-active{
-    transform: translateX(0%);
-}
-
-
-
 
 @keyframes navLinkFade{
     from{
         opacity: 0;
         transform: translateX(50px);
-        
+
     }
     to{
         opacity:  1;
         transform: translateX(0px);
-        
     }
 }
 
 
-.toggle .line1{
-    transform: rotate(-45deg) translate(-5px, 6px));
+.hamburger .line {
+    width: 50px;
+    height: 5px;
+    background-color: #000;
+    display: block;
+    margin: 8px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
-.toggle .line2{
-   opacity: 1;
+.hamburger:hover {
+    cursor: pointer;
 }
 
-.toggle .line3{
-    transform: rotate(45deg) translate(5px, -6px));
+.hamburger.is-active .line:nth-child(2) {
+    opacity: 0;
 }
 
+.hamburger.is-active .line:nth-child(1) {
+    -webkit-transform: translateY(13px) rotate(45deg);
+    -ms-transform: translateY(13px) rotate(45deg);
+    -o-transform: translateY(13px) rotate(45deg);
+    transform: translateY(13px) rotate(45deg);
+}
 
-
-
-
-
+.hamburger.is-active .line:nth-child(3) {
+    -webkit-transform: translateY(-13px) rotate(-45deg);
+    -ms-transform: translateY(-13px) rotate(-45deg);
+    -o-transform: translateY(-13px) rotate(-45deg);
+    transform: translateY(-13px) rotate(-45deg);
+}
