--- a/index.css
+++ b/index.css
@@ -65,6 +65,9 @@ nav{
     background-color: rgb(27, 28, 28);
     margin: 5px;
 }
+.hamburger {
+        display: none;
+    }
 
 @media screen and (max-width: 1024px){
    .nav-links{
